cluster/wol/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wolweb
  namespace: wol
spec:
  selector:
    app: wolweb
  ports:
    - name: http
      port: 80
      targetPort: 8089
