cluster/wol/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wolweb
  namespace: wol
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik-internal
  rules:
    - host: wol.local.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wolweb
                port:
                  name: http
